# advent-of-code-2024

./: CMakeLists.txt
day-01/: CMakeLists.txt  main.cpp
day-02/: CMakeLists.txt  main.cpp
day-03/: CMakeLists.txt  main.cpp
day-04/: CMakeLists.txt  main.cpp
day-05/: CMakeLists.txt  main.cpp
day-06/: CMakeLists.txt  main.cpp
day-07/: CMakeLists.txt  main.cpp
day-11/: CMakeLists.txt  main.cpp
